--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -45,10 +45,10 @@
     <nav class="menu-opcoes">
       <ul class="container nav-list">
         <li><a href="{% url 'index' %}">PÁGINA INICIAL</a></li>
-        <li><a href="{% url 'cardapio' %}">CARDÁPIO</a></li>
-        <li><a href="{% url 'perfil' %}">PERFIL</a></li>
-        <li><a href="{% url 'carrinho' %}">CARRINHO</a></li>
         <li><a href="#sobrenos_slide" class="scroll-link">SOBRE NÓS</a></li>
+        <li><a href="{% url 'cardapio' %}">CARDÁPIO</a></li>
+        <li><a href="{% url 'carrinho' %}">CARRINHO</a></li>
+        <li><a href="{% url 'perfil' %}">PERFIL</a></li>
       </ul>
     </nav>
   </header>
@@ -122,7 +122,7 @@
         <a href="tel:+5515981453091">
           <img src="{% static 'src/chamada-telefonica.png' %}" alt="telefone" class="icones">
         </a>
-        <a href="https://www.google.com/maps/search/?api=1&query=Rua+Alice+Garcia+da+Silva,+380+B14+-+19" target="_blank" rel="noopener">
+        <a href="https://www.google.com/maps/place/Horto+Florestal+Villagio/@-23.4388829,-47.4939461,17z/data=!4m10!1m2!2m1!1shorto+florestal+villagio!3m6!1s0x94c5f5a1b90c2bf3:0x82d29e5ce04c50a!8m2!3d-23.4388157!4d-47.4913903!15sChhob3J0byBmbG9yZXN0YWwgdmlsbGFnaW-SARNjb25kb21pbml1bV9jb21wbGV44AEA!16s%2Fg%2F11k3w806rl?entry=ttu&g_ep=EgoyMDI1MTEyMy4xIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener">
           <img src="{% static 'src/localizacao.png' %}" alt="endereço" class="icones">
         </a>
         <a href="https://www.instagram.com/sayuri_brigadeiros?igsh=MWh4Zjc0Ynp6NTA2eg==" target="_blank" rel="noopener">
