--- a/brigadeiria/produtos/templates/cardapio.html
+++ b/brigadeiria/produtos/templates/cardapio.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="{% static 'CSS/search.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/cardapio.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/descricao.css' %}" />
+  <link rel="stylesheet" href="{% static 'CSS/alerta.css' %}" />
+
   <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 </head>
 <body>
@@ -142,6 +144,7 @@
   <script src="{% static 'JS/search.js' %}" defer></script>
   <script src="{% static 'JS/script.js' %}" defer></script>
   <script src="{% static 'JS/descricaoProduto.js' %}" defer></script>
+  <script src="{% static 'JS/alerta_carrinho.js' %}"></script>
 
 </body>
 </html>
