--- a/brigadeiria/produtos/templates/cardapio.html
+++ b/brigadeiria/produtos/templates/cardapio.html
@@ -21,6 +21,8 @@
   <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 </head>
 <body>
+  <div id="global-alerts" class="msg-container"></div>
+
 
   <!-- CABEÇALHO -->
   <header class="main-header">
@@ -144,7 +146,8 @@
   <script src="{% static 'JS/search.js' %}" defer></script>
   <script src="{% static 'JS/script.js' %}" defer></script>
   <script src="{% static 'JS/descricaoProduto.js' %}" defer></script>
-  <script src="{% static 'JS/alerta_carrinho.js' %}"></script>
+  <script src="{% static 'JS/alerta.js' %}"></script>
+
 
 </body>
 </html>
