--- a/brigadeiria/produtos/templates/perfil.html
+++ b/brigadeiria/produtos/templates/perfil.html
@@ -212,9 +212,9 @@
 
 
                     <p class="end">Endereço</p>
-                    <input type="text" id="cep" name="cep" placeholder="CEP">
-                    <input type="text" id="endereco" name="endereco" placeholder="Endereço">
-                    <input type="number" id="numero" name="num" placeholder="Número">
+                    <input type="text" id="cep" name="cep" placeholder="CEP" required>
+                    <input type="text" id="endereco" name="endereco" placeholder="Endereço" required>
+                    <input type="number" id="numero" name="num" placeholder="Número" required>
                     <input type="text" name="complemento" placeholder="Complemento">
 
                     <button type="submit">Cadastrar</button>
