--- a/brigadeiria/produtos/templates/produto_detalhe.html
+++ b/brigadeiria/produtos/templates/produto_detalhe.html
@@ -16,6 +16,7 @@
   <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 </head>
 <body>
+  <div id="global-alerts" class="msg-container"></div>
 
   <!-- CABEÇALHO -->
   <header class="main-header">
@@ -110,5 +111,7 @@
   <script src="{% static 'JS/produto_detalhe.js' %}" defer></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="{% static 'JS/alerta.js' %}"></script>
+
 </body>
 </html>
