--- a/brigadeiria/produtos/static/CSS/perfil.css
+++ b/brigadeiria/produtos/static/CSS/perfil.css
@@ -12,7 +12,7 @@
   padding: 35px 28px;
   box-shadow: 0 8px 25px rgba(0,0,0,0.12);
   animation: fadeIn 0.3s ease;
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 /* Animação */
@@ -168,6 +168,35 @@ button:hover {
     padding: 10px 16px;
     border-radius: 8px;
     cursor: pointer;
+}
+
+/* EYES - SENHA VISÍVEL */
+
+.passwordInput {
+    position: relative;
+    width: 100%;
+}
+
+.passwordInput input {
+    width: 100%;
+    padding-right: 40px; 
+}
+
+.eyeToggle {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    width: 20px;     /* diminui o tamanho */
+    height: 20px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    opacity: .8;
+    transition: .2s;
+}
+
+.eyeToggle:hover {
+    opacity: 1;
+    transform: translateY(-50%) scale(1.1);
 }
 
 /* animação */
