--- a/brigadeiria/produtos/templates/verificar_email.html
+++ b/brigadeiria/produtos/templates/verificar_email.html
@@ -3,9 +3,11 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Verificar e-mail | Sayuri’s Brigadeiros</title>
+  <title>Verificação de E-mail | Sayuri’s Brigadeiros</title>
   <link rel="stylesheet" href="{% static 'CSS/verificar.css' %}">
   <link rel="stylesheet" href="{% static 'CSS/alerta.css' %}">
+  <link rel="stylesheet" href="{% static 'CSS/base.css' %}">
+  <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 </head>
 <body>
   <main class="verificar-container">
