--- a/brigadeiria/produtos/static/CSS/perfil_logado.css
+++ b/brigadeiria/produtos/static/CSS/perfil_logado.css
@@ -1,3 +1,8 @@
+body.no-scroll {
+    overflow: hidden !important;
+    height: 100vh;
+}
+
 /* ======================================
    CONTAINER PRINCIPAL DO PERFIL LOGADO
 ====================================== */
