--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -90,7 +90,7 @@
 
     <section id="sobrenos_slide" class="sobrenos_slide">
       <div class="foto_sandra">
-        <img src="{% static 'src/confeitaria-profissional.webp' %}">
+        <img src="{% static 'src\WhatsApp Image 2025-12-02 at 11.17.16 AM.jpeg' %}">
       </div>
       <div class="sobrenos_texto" id="sobrenos_texto">
         <h3 class="escrita">SOBRE NÓS</h3>
